--- a/stories/icon-gallery.stories.mdx
+++ b/stories/icon-gallery.stories.mdx
@@ -37,7 +37,8 @@ An icon gallery for Storybook docs that support multiple icon variants.
     components={{
         "IconGallery": IconGallery,
         "IconGallery.Item": IconGallery.Item,
-        "IconGallery.Variant": IconGallery.Variant
+        "IconGallery.Variant": IconGallery.Variant,
+        "IconGallery.Icon": IconGallery.Icon
     }}
 />
 
@@ -182,21 +183,47 @@ To apply a custom pattern for the display name of all the items, a function can 
 
 ### Autosize
 
-When autosize is disabled, the icons components are responsible of their size.
+When autosize is disabled, you are responsible of settings the `width` and `height` of the variant icons.
 
 <Preview>
     <Story name="autosize">
-        <IconGallery autosize={false}>
+        <IconGallery>
             <IconGallery.Item name="add">
-                <IconGallery.Variant size={24}>
+                <IconGallery.Variant size={24} autosize={false}>
                     <AddIcon24 style={{ width: "24px", height: "24px" }} />
                 </IconGallery.Variant>
-                <IconGallery.Variant size={32}>
+                <IconGallery.Variant size={32} autosize={false}>
                     <AddIcon style={{ width: "32px", height: "32px" }} />
                 </IconGallery.Variant>
-                <IconGallery.Variant size={48}>
+                <IconGallery.Variant size={48} autosize={false}>
                     <AddIcon style={{ width: "48px", height: "48px" }} />
                 </IconGallery.Variant>
+            </IconGallery.Item>
+        </IconGallery>
+    </Story>
+</Preview>
+
+### No variants
+
+Variants are optionnal, you can still use this component if your design system dont support multiple variants of icons.
+
+<Preview>
+    <Story name="no-variants">
+        <IconGallery>
+            <IconGallery.Item name="add">
+                <IconGallery.Icon>
+                    <AddIcon style={{ width: "32px", height: "32px" }} />
+                </IconGallery.Icon>
+            </IconGallery.Item>
+            <IconGallery.Item name="calendar">
+                <IconGallery.Icon>
+                    <CalendarIcon style={{ width: "32px", height: "32px" }} />
+                </IconGallery.Icon>
+            </IconGallery.Item>
+            <IconGallery.Item name="check">
+                <IconGallery.Icon>
+                    <CheckIcon style={{ width: "32px", height: "32px" }} />
+                </IconGallery.Icon>
             </IconGallery.Item>
         </IconGallery>
     </Story>
