Wrapping up documentation

--- a/stories/css-escape-hatches.stories.mdx
+++ b/stories/css-escape-hatches.stories.mdx
@@ -3,3 +3,7 @@ import { Meta } from "@storybook/addon-docs/blocks";
 <Meta title="CSS escape hatches" />
 
 # CSS escape hatches
+
+If you want to have fine-grained control over the CSS, all of the Docs components are tagged with class names to make this possible. This is advanced usage: use at your own risk.
+
+The classes follow [Storybook docs CSS escape hatches naming convention](https://github.com/storybookjs/storybook/blob/master/addons/docs/docs/theming.md#css-escape-hatches) (e.g. sbdocs sbdocs-ig-*). To see the currently available classes, simply "inspect element" in your browser.
