--- a/stories/usage.stories.mdx
+++ b/stories/usage.stories.mdx
@@ -23,13 +23,31 @@ import {
     VideoIcon
 } from "@orbit-ui/icons";
 
-<Meta title="Icon Gallery" />
+<Meta title="Usage" />
 
 <Anchor storyId="icon-gallery--single-variant" />
 
 # Icon Gallery
 
 An icon gallery for Storybook docs that support multiple icon variants.
+
+## Installation
+
+<details><summary>install the packages</summary>
+
+```bash
+npm i -D storybook-icon-gallery react-spring
+```
+
+</details>
+
+<details><summary>Then import the icon gallery components</summary>
+
+```js
+import { IconGallery } from "storybook-icon-gallery";
+```
+
+</details>
 
 ## Props
 
