Fix docs top level story id

--- a/stories/usage.stories.mdx
+++ b/stories/usage.stories.mdx
@@ -25,7 +25,7 @@ import {
 
 <Meta title="Usage" />
 
-<Anchor storyId="icon-gallery--single-variant" />
+<Anchor storyId="usage--single-variant" />
 
 # Icon Gallery
 
