Added a default size of an icon item without variants

--- a/stories/usage.stories.mdx
+++ b/stories/usage.stories.mdx
@@ -202,22 +202,22 @@ Variants are optionnal, you can still use this component if your design system d
 <Preview>
     <Story name="no-variants">
         <IconGallery>
-            <IconGallery.Item name="add" size={32}>
+            <IconGallery.Item name="add">
                 <AddIcon />
             </IconGallery.Item>
-            <IconGallery.Item name="calendar" size={32}>
+            <IconGallery.Item name="calendar">
                 <CalendarIcon />
             </IconGallery.Item>
-            <IconGallery.Item name="check" size={32}>
+            <IconGallery.Item name="check">
                 <CheckIcon />
             </IconGallery.Item>
-            <IconGallery.Item name="arrow" size={24}>
-                <ArrowIcon24 />
+            <IconGallery.Item name="arrow">
+                <ArrowIcon />
             </IconGallery.Item>
             <IconGallery.Item name="circle" size={24}>
                 <CircleIcon24 />
             </IconGallery.Item>
-            <IconGallery.Item name="csv" size={32}>
+            <IconGallery.Item name="csv">
                 <CsvIcon />
             </IconGallery.Item>
         </IconGallery>
