Getting rid of React-Spring

--- a/stories/usage.stories.mdx
+++ b/stories/usage.stories.mdx
@@ -36,7 +36,7 @@ An icon gallery for Storybook docs that support multiple icon variants.
 <details><summary>install the packages</summary>
 
 ```bash
-npm i -D storybook-icon-gallery react-spring
+npm i -D storybook-icon-gallery
 ```
 
 </details>
